--- a/templates/web/generate-poster.html
+++ b/templates/web/generate-poster.html
@@ -27,40 +27,31 @@
       {% for obj in common_services_poster|slice:"0:2" %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
+          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" />
+
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
+              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
           </div>
         </div>
       </div>
       {% endfor %}
-      <div class="img-popup">
-        <div class="container" id="resultContainer" style="display: none;">
-          <img class="img-responsive popup-imagea" id="result" src="">
-          <div class="text-center mt-3 poster-download-button">
-            <a id="download" class="btn-sm mx-auto btn btn-warning " download>Download</a>
-          </div>
-        </div>
-        <div class="close-btn">
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
-      </div>
+     
 
       {% for obj in festivel_poster|slice:"0:2" %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
+          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" />
+
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
+              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
           </div>
         </div>
       </div>
@@ -70,13 +61,14 @@
       {% for obj in professional_poster|slice:"0:2" %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
+          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" />
+
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
+              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
           </div>
         </div>
       </div>
@@ -91,13 +83,14 @@
       {% for obj in common_services_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
+          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" />
+
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
+              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
           </div>
         </div>
       </div>
@@ -112,13 +105,14 @@
       {% for obj in festivel_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
+          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" />
+
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
+              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
           </div>
         </div>
       </div>
@@ -133,13 +127,14 @@
       {% for obj in professional_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
+          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" />
+
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
+              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
           </div>
         </div>
       </div>
