--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -87,7 +87,7 @@
 
 
 
-      <li class="nav-item nav-logout d-none d-lg-block">
+      <li class="nav-item nav-logout d-lg-block">
         <a class="nav-link" href="{% url 'auth_logout' %}">
           <i class="mdi mdi-power"></i>
         </a>
