--- a/templates/web/service-head.html
+++ b/templates/web/service-head.html
@@ -24,8 +24,7 @@
                 <img src="{{service.image.crop.179x179}}" class="sub-service-img pb-2" alt="">
                 <h3 class="title">{{service.title}}</h3>
                 <div>
-                  <a href="{{service.link_to_official_website}}" class="access" rel="noopener noreferrer"
-                    target="_blank">ACCESS</a>
+                  <a href="{{service.link_to_official_website}}" class="access" rel="noopener noreferrer" target="_blank">ACCESS</a>
                   <a href="{% url 'services:serviceDetails' service.slug %}" class="view-more">DETAILS</a>
                 </div>
               </div>
