--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -74,7 +74,7 @@
                   <div class="text-center">
                     <button class="btn-sm btn btn-primary generate" target="_blank"
                       data-source="new_service_poster-{{obj.id | apnumber }}">Download</button>
-                    <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
+                    <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
                   </div>
                 </div>
               </div>
@@ -101,7 +101,7 @@
                   <div class="text-center">
                     <button class="btn-sm btn btn-primary generate" target="_blank"
                       data-source="important-poster-{{obj.id | apnumber }}">Download</button>
-                    <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
+                    <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
                   </div>
                 </div>
               </div>
