--- a/templates/web/generate-poster.html
+++ b/templates/web/generate-poster.html
@@ -1,6 +1,8 @@
 {% extends 'web/base.html' %}
-{% load static humanize %}
+{% load static %}
 {% block content %}
+{% load static humanize %}
+
 
 <div class="main-panel " id="demo">
   <div class="content-wrapper" id="demo2">
@@ -20,55 +22,52 @@
 
 
     <div class="row">
-      <div class="col-12">
+      
         <h5 class="service-heading">Recently Added</h5>
-      </div>
+ 
 
-      {% for obj in common_services_poster|slice:"0:2" %}
+      {% for obj in recently_common_services_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" />
-
+          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
+              data-source="{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
       </div>
       {% endfor %}
      
 
-      {% for obj in festivel_poster|slice:"0:2" %}
+      {% for obj in recently_festivel_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" />
-
+          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
+              data-source="{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
       </div>
       {% endfor %}
 
 
-      {% for obj in professional_poster|slice:"0:2" %}
+      {% for obj in recently_professional_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" />
-
+          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
+              data-source="{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
       </div>
@@ -77,20 +76,19 @@
 
 
     <div class="row">
-      <div class="col-12">
+      
         <h5 class="service-heading">Common Services</h5>
-      </div>
+     
       {% for obj in common_services_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" />
-
+          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
+              data-source="{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
       </div>
@@ -99,20 +97,19 @@
 
 
     <div class="row">
-      <div class="col-12">
+     
         <h5 class="service-heading">Festivel Posters</h5>
-      </div>
+     
       {% for obj in festivel_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" />
-
+          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
+              data-source="{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
       </div>
@@ -121,20 +118,19 @@
 
 
     <div class="row">
-      <div class="col-12">
+
         <h5 class="service-heading">Professional Services</h5>
-      </div>
+  
       {% for obj in professional_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
-          <img src="{{branding_image.image.url}}" alt="" />
-
+          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="important-poster-{{obj.id | apnumber }}">Download</button>
-            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
+              data-source="{{obj.id | apnumber }}">Download</button>
+            <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
       </div>
