--- a/templates/web/generate-poster.html
+++ b/templates/web/generate-poster.html
@@ -29,12 +29,12 @@
       {% for obj in recently_common_services_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{obj.image.url}}" data-id="recently_common_services_poster-{{obj.id | apnumber }}" alt="Image">
           <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
+              data-source="recently_common_services_poster-{{obj.id | apnumber }}">Download</button>
             <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
@@ -45,12 +45,12 @@
       {% for obj in recently_festivel_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{obj.image.url}}" data-id="recently_festivel_poster-{{obj.id | apnumber }}" alt="Image">
           <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
+              data-source="recently_festivel_poster-{{obj.id | apnumber }}">Download</button>
             <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
@@ -61,12 +61,12 @@
       {% for obj in recently_professional_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{obj.image.url}}" data-id="recently_professional_poster-{{obj.id | apnumber }}" alt="Image">
           <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
+              data-source="recently_professional_poster-{{obj.id | apnumber }}">Download</button>
             <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
@@ -82,12 +82,12 @@
       {% for obj in common_services_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{obj.image.url}}" data-id="common_services_poster-{{obj.id | apnumber }}" alt="Image">
           <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
+              data-source="common_services_poster-{{obj.id | apnumber }}">Download</button>
             <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
@@ -103,12 +103,12 @@
       {% for obj in festivel_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{obj.image.url}}" data-id="festivel_poster-{{obj.id | apnumber }}" alt="Image">
           <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
+              data-source="festivel_poster-{{obj.id | apnumber }}">Download</button>
             <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
@@ -124,12 +124,12 @@
       {% for obj in professional_poster %}
       <div class="col-lg-3 col-md-4 col-sm-6 col-6">
         <div class="card card-body w-100">
-          <img src="{{obj.image.url}}" data-id="{{obj.id | apnumber }}" alt="Image">
+          <img src="{{obj.image.url}}" data-id="professional_poster-{{obj.id | apnumber }}" alt="Image">
           <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
           <p class="my-1">{{obj.title}}</p>
           <div class="text-center">
             <button class="btn-sm btn btn-primary generate" target="_blank"
-              data-source="{{obj.id | apnumber }}">Download</button>
+              data-source="professional_poster-{{obj.id | apnumber }}">Download</button>
             <a href="{{obj.detail_link}}" class="btn btn-info btn-sm">Details</a>
           </div>
         </div>
